plugins {
	id 'java'
	id 'org.springframework.boot' version '3.1.3'
	id 'io.spring.dependency-management' version '1.1.3'
	id "org.sonarqube" version "4.2.1.3168"
	id 'jacoco'
}

jacocoTestReport {
	reports {
		xml.required = true
		csv.required = false
		html.required = true
		html.outputLocation = layout.buildDirectory.dir("jacocoHtml")
	}
}

group = 'nl.fontys.lms'
version = '0.0.1-SNAPSHOT'

java {
	sourceCompatibility = '17'
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.projectlombok:lombok:1.18.28'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.flywaydb:flyway-core'
	implementation 'org.flywaydb:flyway-mysql'
	implementation 'mysql:mysql-connector-java:8.0.33'
	implementation 'com.h2database:h2'
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.1.0'

	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'

	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'

	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'

	implementation 'javax.validation:validation-api:2.0.1.Final'
	implementation 'org.hibernate.validator:hibernate-validator:6.2.0.Final'

	implementation 'org.springframework.boot:spring-boot-starter-websocket'
}

sonar {
	properties {
		property "sonar.projectKey", "LMS-SQ"
		property "sonar.projectName", "LMS-SQ"
		property "sonar.qualitygate.wait", false
		property "sonar.coverage.exclusions", "**/src/main/java/nl/fontys/lms/configuration/**,**/src/main/java/nl/fontys/lms/persistence/**,**/src/main/java/nl/fontys/lms/controller/**,**/src/main/java/nl/fontys/lms/domain/**"
	}
}

test {
	useJUnitPlatform()
	finalizedBy jacocoTestReport
}
